Added autoprobing test, adding sysmon temporature read, wip

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,14 +1,26 @@
 source [find interface/jlink.cfg]
 transport select jtag
 
-jtag_rclk 6000 
+set SPEED 1
+jtag_rclk $SPEED
+adapter speed $SPEED 
+reset_config none
+
+# jlink config
 
 set CHIPNAME XCKU3P
-set CHIP XCKU3P
-
-puts "set chipname "$CHIPNAME
-
-puts "--------------------"
+set CHIP $CHIPNAME
+puts "set chipname "$CHIP
 
 source [find ../openocd/tcl/cpld/xilinx-xcu.cfg]
 
+
+puts "Read temperature sysmon 4" 
+
+source [find ../openocd/tcl/fpga/xilinx-sysmon.cfg]
+
+init 
+
+sysmon_report $CHIP.tap
+
+puts "--------------------"
