It works ( I think )

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,3 +1,6 @@
+set bit_path "/home/gp/rtl/led_blink/out/project_prj_checkpoint.bit"
+set svf_path "/home/gp/rtl/led_blink/out/project_prj_checkpoint.svf"
+
 source [find interface/jlink.cfg]
 transport select jtag
 
@@ -21,6 +24,23 @@ source [find ../openocd/tcl/fpga/xilinx-sysmon.cfg]
 
 init 
 
+puts "--------------------"
+
 sysmon_report $CHIP.tap
 
 puts "--------------------"
+
+# program
+if {![file exists $bit_path]} {
+	puts "Bit path not found : $bit_path"
+	exit
+}
+
+#virtex2 refresh $CHIP.pld
+#pld load $CHIP.pld $bit_path
+
+svf $svf_path -progress 
+ 
+exit 
+
+
